moved PDO from SQL to PHP and fixed alignment for subdrawers

--- a/src/Components/SkillProfiler/SkillDisplay/SkillDisplay.module.css
+++ b/src/Components/SkillProfiler/SkillDisplay/SkillDisplay.module.css
@@ -29,4 +29,5 @@
 .SkillDisplay li p {
     margin-bottom: 5px;
     font-size: 0.9rem;
+    text-align: start;
 }
